# mp3check

./: INSTALL  Makefile  configure  meson.build
include/: crc16.h  id3tag.h  tappconfig.h  texception.h  tfiletools.h  tmap.h  tregex.h  tstring.h  tvector.h
man/: mp3check.1
src/: meson.build
