mp3check_sources = ['crc16.cc',
                    'id3tag.cc',
                    'mp3check.cc',
                    'tappconfig.cc',
                    'tfiletools.cc',
                    'tregex.cc',
                    'tstring.cc']
executable('mp3check',
           sources: mp3check_sources,
           include_directories: inc)
